--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider: ^6.0.3
+  flutter_bloc: ^8.0.1
+  connectivity: ^3.0.6
 
 dev_dependencies:
   flutter_test:
