--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   provider: ^6.0.3
   flutter_bloc: ^8.0.1
   connectivity: ^3.0.6
+  email_validator: ^2.0.1
 
 dev_dependencies:
   flutter_test:
